# fanva

./: .envrc  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Justfile  NIBLI_REV  NOTICE  README.md  TODO.md  determinism-corpus.lojban  flake.nix
.claude/skills/fanva-todo/: SKILL.md
.github/workflows/: ci.yml  full-dict.yml  redeploy-site.yml
docs/: LOGIC_IR.md  PROMPT.md  convergence-measurement.md
docs/archive/: TODO-original.md  lojban2klaro.rs  nibli-fanva-TODO.md
docs/reference/known-failures/: known_failures.rs  known_failures_fatal.rs
fanva/: Cargo.toml  README.md
fanva-proxy/: DEPLOY.md  README.md  package-lock.json  package.json
fanva-proxy/src/: index.js
fanva-ui/: Cargo.toml
fanva-ui/assets/: style.css  tokens.css
fanva-ui/src/: main.rs
fanva-verify/: Cargo.toml
fanva-verify/src/: generator.rs  lib.rs
fanva-verify/tests/: parser_differential.rs  predilex_differential.rs
fanva/corpora/: measure-english.txt
fanva/src/: agent.rs  gates.rs  lib.rs  verify.rs
fanva/src/llm/: request.rs  system_prompt.rs
fanva/src/mcp/: wire.rs
fanva/tests/: giha_corners.rs  known_failures.rs
fuzz/: Cargo.toml
gerna/src/: ast.rs  goi.rs  grammar.rs  grammar_tests.rs  integration_tests.rs  lib.rs  pipeline_tests.rs
gerna/src/grammar/: sentence.rs
nibli-types/src/: ast.rs
python/: generate_training_data.py  nibli_model.py
smuni-dictionary/: build.rs
smuni/src/: lib.rs  semantic.rs
smuni/src/semantic/: compile.rs
