[package]
name = "fanva-ui"
description = "Dioxus web UI for fanva — the agentic English→Lojban translator"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7.3", features = ["web"] }
nibli-render = { path = "../nibli-render" }
gerna = { path = "../gerna" }
smuni = { path = "../smuni" }
smuni-dictionary = { path = "../smuni-dictionary" }
fanva = { path = "../fanva" }
