[package]
name = "fanva-verify"
description = "gerna's conformance suite: the gerna ↔ camxes parse-differential (ilmentufa via node) and the Predilex dictionary-arity differential"
version = "0.1.0"
edition = "2024"

[dependencies]
# Direct parser access for the gerna <-> camxes parse-differential (parse-level
# acceptance).
gerna = { path = "../gerna" }

[dev-dependencies]
# The Predilex arity gate (tests/predilex_differential.rs) joins the vendored
# Predilex expectations against the SHIPPED dictionary arities. Dev-only so the
# library's data layer (src/predilex.rs) stays a pure parser.
smuni-dictionary = { path = "../smuni-dictionary" }
