[package]
name = "fanva"
version = "0.1.0"
edition = "2024"
description = "Agentic English→Lojban translator engine (multi-turn LLM + three-gate validator: gerna ∧ smuni ∧ camxes, with jbotci MCP tool-use). fanva = Lojban 'translate'."

# Pure-logic engine consumed by fanva-ui. The gerna/smuni gates and the
# agent/provider logic build + unit-test on the NATIVE target with mocked
# chat()/MCP; the gloo-net HTTP client and the camxes.js JS-interop gate
# are wasm-only. No Dioxus here — the UI shell is fanva-ui's job.

[dependencies]
gerna = { path = "../gerna" }
smuni = { path = "../smuni" }
nibli-render = { path = "../nibli-render" }
nibli-types = { path = "../nibli-types" }
serde_json = "1"

# Dev-only convergence-measurement harness (the `measure` bin, `--features
# measure`). Optional so the shipped wasm bundle never pulls a native HTTP stack:
# `ureq` is the native send, `futures` drives the async loop, `fanva-verify`
# supplies the camxes-via-node third gate. None of these are in the browser build.
ureq = { version = "2", optional = true }
futures = { version = "0.3", features = ["executor"], optional = true }
fanva-verify = { path = "../fanva-verify", optional = true }

[features]
# The native measurement harness: a real HTTP transport + the camxes-via-node
# third gate. NEVER enabled for the wasm/browser build (fanva-ui doesn't set it).
measure = ["dep:ureq", "dep:futures", "dep:fanva-verify"]

# Batch validator for the python Lojban flywheel (generate_training_data.py /
# nibli_model.py subprocess it): one JSON verdict per stdin line.
[[bin]]
name = "fanva-validate"
path = "src/bin/validate.rs"

# Convergence-measurement harness — built only with `--features measure`, so a
# plain `cargo build`/`cargo test`/the wasm build all skip it.
[[bin]]
name = "measure"
path = "src/bin/measure.rs"
required-features = ["measure"]

[dev-dependencies]
# A minimal block_on for driving the async agent loop in native unit tests.
futures = { version = "0.3", features = ["executor"] }

# Browser fetch — compiled ONLY for the wasm target (the concrete `Chat` transport).
# Native builds/tests skip it and use a mock `Chat`, so the pure logic stays offline-testable.
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.6", features = ["http"] }
# camxes "official" gate: call the browser's window.camxes_validate synchronously.
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
