[package]
name = "fanva-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
gerna = { path = "../gerna" }

# Prevent debug info from slowing fuzzer
[profile.release]
debug = 1

[[bin]]
name = "fuzz_parse"
path = "fuzz_targets/fuzz_parse.rs"
doc = false
